Update some content and adjust string literal delimiters.

--- a/higher-order-functions-and-decorators.ipynb
+++ b/higher-order-functions-and-decorators.ipynb
@@ -52,7 +52,7 @@
     }
    },
    "source": [
-    "To understand decorators, it is necessary to at least be aware of higher-order functions. In Python, functions can be defined and used just like values. This is a characteristic feature of the functional programming paradigm, which Python supports. Consider the following example in which a function `f` is defined and then passed as an argument to another function `twice`. Note that when `twice` receives the argument `f` it is assigned to the local variable `g`. Then this yields `g(g(y))` = `f(f(y))` = `f(y + y)` = `(y + y) + (y + y)`. If you assign `2` to `y`, this will yield `g(g(2))` = `f(f(2))` = `f(2 + 2)` = `(2 + 2) + (2 + 2)` = `8`."
+    "To understand decorators, it is necessary to at least be aware of higher-order functions. In Python, functions can be defined and used just like values. This is a characteristic feature of the [functional programming paradigm](https://en.wikipedia.org/wiki/Functional_programming), which Python supports. Consider the following example in which a function `f` is defined and then passed as an argument to another function `twice`. Note that when `twice` receives the argument `f` it is assigned to the local variable `g`. Then this yields `g(g(y))` = `f(f(y))` = `f(y + y)` = `(y + y) + (y + y)`. If you assign `2` to `y`, this will yield `g(g(2))` = `f(f(2))` = `f(2 + 2)` = `(2 + 2) + (2 + 2)` = `8`."
    ]
   },
   {
@@ -122,9 +122,11 @@
     "\n",
     "def twice(g):\n",
     "\n",
+    "    # Define a new function locally.\n",
     "    def h(y):\n",
     "        return g(g(y))\n",
     "\n",
+    "    # Return the local function as the result.\n",
     "    return h\n",
     "\n",
     "twice(f)"
@@ -138,7 +140,7 @@
     }
    },
    "source": [
-    "Because `twice(f)` is a function, you can apply it to an argument."
+    "Because `twice(f)` is a function, you can apply it to an argument and it will return a result."
    ]
   },
   {
@@ -202,7 +204,7 @@
     "    # This is the new variant of the function `f`.\n",
     "    def f_displays(x):\n",
     "        r = f(x)\n",
-    "        print(\"The result is:\", r)\n",
+    "        print('The result is:', r)\n",
     "        return r\n",
     "\n",
     "    return f_displays"
@@ -216,7 +218,7 @@
     }
    },
    "source": [
-    "This new function can then be applied to any existing function to give you a new version that also prints its result."
+    "This transformer function `displays` can then be applied to any existing function to give you a new version that also prints its result."
    ]
   },
   {
@@ -263,7 +265,33 @@
     }
    },
    "source": [
-    "Python's concrete syntax lets you do exactly the same thing using a more concise notation: prepend a `@` symbol before your higher-order function and place it immediately before the definition of the function you want to transform. "
+    "Python's concrete syntax lets you do exactly the same thing using a more concise notation: prepend the `@` symbol before your higher-order function and place it immediately before the definition of the function you want to transform. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@displays\n",
+    "def triple(x):\n",
+    "    return x + x + x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "In the example above, the variable `triple` (after the decorated definition is executed) refers to the transformed version of the function in the definition."
    ]
   },
   {
@@ -294,10 +322,6 @@
     }
    ],
    "source": [
-    "@displays\n",
-    "def triple(x):\n",
-    "    return x + x + x\n",
-    "\n",
     "triple(2)"
    ]
   },
@@ -380,7 +404,7 @@
     }
    ],
    "source": [
-    "@displays_with(\"The function returned:\")\n",
+    "@displays_with('The function returned:')\n",
     "def triple(x):\n",
     "    return x + x + x\n",
     "\n",
@@ -395,7 +419,7 @@
     }
    },
    "source": [
-    "To clarify what is happening, code that is functionally equivalent to code above is presented below."
+    "To clarify what is happening, a code block that is functionally equivalent to code above is presented below."
    ]
   },
   {
@@ -429,7 +453,7 @@
     "def triple(x):\n",
     "    return x + x + x\n",
     "\n",
-    "triple = displays_with(\"The function returned:\")(triple)\n",
+    "triple = displays_with('The function returned:')(triple)\n",
     "\n",
     "triple(2)"
    ]
@@ -493,7 +517,7 @@
     }
    ],
    "source": [
-    "@displays_with(\"The function returned:\")\n",
+    "@displays_with('The function returned:')\n",
     "@function\n",
     "def triple(x):\n",
     "    return x + x + x\n",
@@ -509,7 +533,7 @@
     }
    },
    "source": [
-    "Note that order *does* matter: if you place the `function` decorator *above* the `displays_with`, the function added to the list using `function` will be the one already modified by `displays_with`. Thus, when multiple decorators are present they are applied *from the bottom up* (or, in other words, decorators are *right-associative*)."
+    "Note that order *does* matter: if you place the `function` decorator *above* the `displays_with`, the function added to the list using `function` will be the one already modified by `displays_with`. Thus, when multiple decorators are present they are applied *from the bottom up* (or, in other words, decorators are *right-associative*). In the example below, the *transformed* function `triple` is added to the list of functions."
    ]
   },
   {
@@ -543,11 +567,22 @@
     "functions = []\n",
     "\n",
     "@function\n",
-    "@displays_with(\"The function returned:\")\n",
+    "@displays_with('The function returned:')\n",
     "def triple(x):\n",
     "    return x + x + x\n",
     "\n",
     "functions[0](2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "In the example below, on the other hand, the *original* version of `triple` is added to the list of functions."
    ]
   },
   {
@@ -573,7 +608,7 @@
    "source": [
     "functions = []\n",
     "\n",
-    "@displays_with(\"The function returned:\")\n",
+    "@displays_with('The function returned:')\n",
     "@function\n",
     "def triple(x):\n",
     "    return x + x + x\n",
@@ -644,7 +679,7 @@
     "        pass\n",
     "\n",
     "def check(cls):\n",
-    "    return callable(getattr(cls, \"method\", None))\n",
+    "    return callable(getattr(cls, 'method', None))\n",
     "\n",
     "check(C), check(D)"
    ]
@@ -671,8 +706,8 @@
    "outputs": [],
    "source": [
     "def displayable(cls):\n",
-    "    if not callable(getattr(cls, \"display\", None)):\n",
-    "        raise Exception(\"objects of this class are not displayable\")"
+    "    if not callable(getattr(cls, 'display', None)):\n",
+    "        raise Exception('objects of this class are not displayable')"
    ]
   },
   {
@@ -688,7 +723,18 @@
     "@displayable\n",
     "class C:\n",
     "    def display(self):\n",
-    "        return \"C\""
+    "        return 'C'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "The expected behavior can be seen in the example below."
    ]
   },
   {
@@ -986,7 +1032,7 @@
     }
    },
    "source": [
-    "Suppose you want to test that a method always returns positive outputs in a range of inputs. The example below illustrates one way to do so."
+    "For the first example, suppose you want to test that a method always returns positive outputs in a range of inputs. The decorator definition below illustrates one way that this can be accomplished."
    ]
   },
   {
@@ -1004,7 +1050,7 @@
     "    # Run some tests on `f`.\n",
     "    for x in range(-10,11):\n",
     "        if f(x) < 0:\n",
-    "            raise ValueError(\"incorrect negative output\")\n",
+    "            raise ValueError('incorrect negative output')\n",
     "\n",
     "    # Do not modify the original function.\n",
     "    return f\n",
@@ -1022,7 +1068,7 @@
     }
    },
    "source": [
-    "Suppose you want to check the running time of a method. You can use decorators in conjunction with the built-in `time` package."
+    "For the second example, consider a situation in which you want to check the running time of various methods. You can use decorators in conjunction with the built-in `time` package."
    ]
   },
   {
@@ -1042,22 +1088,21 @@
     "        ts = time()\n",
     "        result = f()\n",
     "        te = time()\n",
-    "        print(f.__name__ + \":\", te-ts, \"seconds\")\n",
+    "        print(f.__name__ + ':', te-ts, 'seconds')\n",
     "        return result\n",
     "\n",
     "    return time_f"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "@timed\n",
-    "def work():\n",
-    "    from time import sleep\n",
-    "    sleep(1)"
+    "The example below demonstrates how the `timed` decorator defined above might be used."
    ]
   },
   {
@@ -1069,11 +1114,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "work: 1.000389575958252 seconds\n"
+      "work: 1.0003864765167236 seconds\n"
      ]
     }
    ],
    "source": [
+    "@timed\n",
+    "def work():\n",
+    "    from time import sleep\n",
+    "    sleep(1)\n",
     "work()"
    ]
   },
@@ -1116,7 +1165,7 @@
     }
    },
    "source": [
-    "To avoid this, you can use the built-in `wraps` function found in `functools`."
+    "To avoid this, you can use the built-in high-order function [`wraps`](https://docs.python.org/3/library/functools.html#functools.wraps) function (which can itself be used as a decorator) found in [`functools`](https://docs.python.org/3/library/functools.html)."
    ]
   },
   {
@@ -1132,7 +1181,7 @@
     "    def decorated_f():\n",
     "        return f()\n",
     "\n",
-    "    return decorated_f\n"
+    "    return decorated_f"
    ]
   },
   {
@@ -1143,7 +1192,7 @@
     }
    },
    "source": [
-    "This ensures the metadata of the original function is preserved."
+    "Using `wraps` as in the above example ensures the metadata of the original function is preserved."
    ]
   },
   {
@@ -1172,6 +1221,28 @@
     "    pass\n",
     "\n",
     "f.__name__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Further Reading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Hopefully, this article leaves you with a better understanding of how decorators are a syntactically convenient way to use higher-order functions and helps you recognize some of the situations for which they may be well-suited in your own work. There are many other compelling use cases for both higher-order functions and decorators, some of which may be covered in future articles. For a more comprehensive resource on decorators, you may want to look at the [Python Wiki](https://wiki.python.org/moin/PythonDecorators3). To learn more about the history of the feature, you can review the [Python Enhancement Proposal](https://www.python.org/dev/peps/pep-0318/) for this feature."
    ]
   }
  ],
