Adjust formatting of external link to built-in library.

--- a/higher-order-functions-and-decorators.ipynb
+++ b/higher-order-functions-and-decorators.ipynb
@@ -1165,7 +1165,7 @@
     }
    },
    "source": [
-    "To avoid this, you can use the built-in high-order function [`wraps`](https://docs.python.org/3/library/functools.html#functools.wraps) function (which can itself be used as a decorator) found in [`functools`](https://docs.python.org/3/library/functools.html)."
+    "To avoid this, you can use the built-in high-order function [`wraps`](https://docs.python.org/3/library/functools.html#functools.wraps) function (which can itself be used as a decorator) found in the built-in [functools](https://docs.python.org/3/library/functools.html) library."
    ]
   },
   {
